--- a/src/blocks/form/form.pug
+++ b/src/blocks/form/form.pug
@@ -37,8 +37,8 @@ mixin form(mods)
 
 mixin btn-send
 
-  button.btn.btn--form-tg.absolute.right-0.bottom-0.flex.items-center.justify-center(class=allMods)&attributes(attributes)
-    +svg('tg-outline','',{width: 18, height: 18})
+  button.btn.btn--form-send.absolute.right-0.bottom-0.flex.items-center.justify-center(class=allMods)&attributes(attributes)
+    +svg('send','',{width: 18, height: 18})
     span Отправить
 
 
