--- a/src/blocks/page-links/page-links.scss
+++ b/src/blocks/page-links/page-links.scss
@@ -4,7 +4,22 @@
 
 .page-links {
 
-  $block-name:                &; // #{$block-name}__element
+  $block-name: &; // #{$block-name}__element
 
   margin-bottom: 0;
+  border-bottom: 1px solid $tw-gray-200;
+
+
+
+  &__link {
+    cursor: pointer;
+
+    .product-data & {
+      display: flex !important;
+      align-items: center;
+      height: 100%;
+      text-align: center;
+    }
+
+  }
 }
