--- a/src/blocks/product-card/product-card.scss
+++ b/src/blocks/product-card/product-card.scss
@@ -89,7 +89,8 @@
         grid-row-start: 2;
         grid-row-end: 3;
         grid-column-start: 2;
-        grid-column-end: 3;      }
+        grid-column-end: 3;
+      }
     }
 
     #{$block-name}__text {
@@ -141,6 +142,8 @@
       }
     }
   }
+
+
 
   &__inner {
     display: flex;
@@ -266,7 +269,7 @@
   &__status {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     // position: relative;
     @apply text-sm;
 
@@ -285,6 +288,15 @@
     svg {
       margin-right: 5px;
       fill: transparent;
+    }
+
+    .product-main & {
+      @media (min-width: $screen-lg) {
+        margin-top: 5px;
+        margin-bottom: 0;
+        grid-column-start: 2;
+        grid-column-end: 3;
+      }
     }
   }
 
@@ -337,6 +349,7 @@
     margin-left: 30px;
     top: 11px;
     right: 10px;
+    z-index: 10;
 
     @media (min-width: $screen-lg) {
       top: 18px;
@@ -361,6 +374,14 @@
 
     svg {
       stroke: currentColor;
+    }
+
+    .product-main & {
+      @media (min-width: $screen-lg) {
+        height: 32px;
+        padding-top: 3px;
+        padding-bottom: 3px;
+      }
     }
   }
 
@@ -395,7 +416,26 @@
   }
 
   &__credit {
+    padding-right: 15px;
     justify-self: end;
+    white-space: nowrap;
+
+    .product-main & {
+      @media (min-width: $screen-lg) {
+        margin-top: 5px;
+        margin-left: 25px;
+        justify-self: start;
+        align-items: center;
+      }
+
+      svg {
+        @media (min-width: $screen-lg) {
+          width: 24px;
+          height: 24px;
+          margin-bottom: 5px;
+        }
+      }
+    }
   }
 
 }
