--- a/src/blocks/product-main/product-main.pug
+++ b/src/blocks/product-main/product-main.pug
@@ -23,7 +23,7 @@ mixin product-main(props={}, mods)
     .product-card__credit.flex.text-sm.text-gray-500
       +svg('wallet', '', sizes={width:'20',height:'20'})(class='fill-transparent mr-5px')
       div В кредит <span class='product-card__credit-sum'>679</span> рублей в месяц
-    h1.product-main__title.mt-0.mb-20px.text-xl РИКТА 04/4
+    h1.product-main__title.mt-0.mb-20px.lg_mt-8px.lg_mb-20px РИКТА 04/4
     .product-main__sliders
       .product-main__slider-wrapper.slider__wrapper
         .product-main__slider.slider#product-main
@@ -39,6 +39,8 @@ mixin product-main(props={}, mods)
                 span Гарантия 2 года
               span.product-card__top-item
                 span Акция
+              //- span.product-card__top-item
+              //-   span 1
           +product-main-item-video({
             url: '/video/banana.mp4',
             width: '1920',
@@ -49,6 +51,8 @@ mixin product-main(props={}, mods)
               span.product-card__top-item
                 +svg('shield','',{width: 16, height: 18})(class='mr-8px')
                 span Гарантия 2 года
+              //- span.product-card__top-item
+              //-   span 2
           +product-main-item-video({
             url: '/video/dummy.mov',
             width: '1920',
@@ -58,6 +62,8 @@ mixin product-main(props={}, mods)
             .product-card__top-list
               span.product-card__top-item
                 span Акция
+              //- span.product-card__top-item
+              //-   span 3
           +product-main-item-video({
             url: '/video/dummy.mov',
             width: '1920',
@@ -67,6 +73,8 @@ mixin product-main(props={}, mods)
             .product-card__top-list
               span.product-card__top-item
                 span Акция 2
+              //- span.product-card__top-item
+              //-   span 4
           +product-main-item-video({
             url: '/video/banana.mp4',
             width: '1920',
@@ -77,6 +85,44 @@ mixin product-main(props={}, mods)
               span.product-card__top-item
                 +svg('shield','',{width: 16, height: 18})(class='mr-8px')
                 span Гарантия 3 года
+              //- span.product-card__top-item
+              //-   span 5
+          +product-main-item-video({
+            url: '/video/banana.mp4',
+            width: '1920',
+            height: '1080',
+            poster: '/img/product-main-slider-poster.jpg'
+          })(data-slide='5')
+            .product-card__top-list
+              span.product-card__top-item
+                +svg('shield','',{width: 16, height: 18})(class='mr-8px')
+                span Гарантия 3 года
+              //- span.product-card__top-item
+              //-   span 6
+          +product-main-item-video({
+            url: '/video/banana.mp4',
+            width: '1920',
+            height: '1080',
+            poster: '/img/product-main-slider-poster.jpg'
+          })(data-slide='6')
+            .product-card__top-list
+              span.product-card__top-item
+                +svg('shield','',{width: 16, height: 18})(class='mr-8px')
+                span Гарантия 3 года
+              //- span.product-card__top-item
+              //-   span 7
+          +product-main-item-video({
+            url: '/video/banana.mp4',
+            width: '1920',
+            height: '1080',
+            poster: '/img/product-main-slider-poster.jpg'
+          })(data-slide='7')
+            .product-card__top-list
+              span.product-card__top-item
+                +svg('shield','',{width: 16, height: 18})(class='mr-8px')
+                span Гарантия 3 года
+              //- span.product-card__top-item
+              //-   span 8
         .product-main__controls.slider__controls.slider__controls--center(aria-label="Carousel Navigation" tabindex="0")
           button.slider__controls-btn.slider__controls-btn--prev(type="button" data-controls="prev" tabindex="-1" aria-controls="tns1")
             +svg('arrow','',{width: 19,height:19})
@@ -89,16 +135,19 @@ mixin product-main(props={}, mods)
           +product-main-item-preview({url: '/img/product-preview.jpg'})(data-slide='2')
           +product-main-item-preview({url: '/img/product-preview.jpg'})(data-slide='3')
           +product-main-item-preview({url: '/img/product-preview.jpg'})(data-slide='4')
+          +product-main-item-preview({url: '/img/product-preview.jpg'})(data-slide='5')
+          +product-main-item-preview({url: '/img/product-preview.jpg'})(data-slide='6')
+          +product-main-item-preview({url: '/img/product-preview.jpg'})(data-slide='7')
         .product-main__previews-controls.slider__controls.slider__controls--center(aria-label="Carousel Navigation" tabindex="0")
           button.slider__controls-btn.slider__controls-btn--prev(type="button" data-controls="prev" tabindex="-1" aria-controls="tns1")
             +svg('angle','',{width: 7,height:14})
           button.slider__controls-btn.slider__controls-btn--next(type="button" data-controls="next" tabindex="-1" aria-controls="tns1")
             +svg('angle','',{width: 7,height:14})
-    .product-main__price-wrapper.mt-12px.mb-25px
-      .product-main__price.mr-10px 44 800 ₽
+    .product-main__price-wrapper.mt-12px.mb-25px.lg_mt-0.lg_mb-30px
+      .product-main__price.mr-10px.lg_mr-20px 44 800 ₽
       .product-main__price-old 28 600 ₽
     +product-options({
-      title: '<div class="mb-10px text-lg text-black">Дополнительно</div>'
+      title: '<div class="mb-10px text-lg text-black col-start-1 col-end-3">Дополнительно</div>'
     })(class='product-main__options')
     .product-actions.product-actions--product-main
       +btn(
@@ -108,11 +157,11 @@ mixin product-main(props={}, mods)
         +svg('heart-full','',{width: '22', height: '21'})
       +btn('','compare, compare-add')
         +svg('arrows-left-right','',{width: '18', height: '23'})
-    +btn(
-      '<svg class="icon" width="18" height="18"><use xlink:href="img/sprite.svg#mouse-square"></use></svg> <span>Задать вопрос врачу</span>',
-      'regular, icon, question')(class='product-main__question mt-10px' data-modal-open='modal-ask-doctor')
+      +btn(
+        '<svg class="icon" width="18" height="18"><use xlink:href="img/sprite.svg#mouse-square"></use></svg> <span>Задать вопрос врачу</span>',
+        'regular, icon, question')(class='product-main__question mt-10px lg_mt-0' data-modal-open='modal-ask-doctor')
     .product-main__special.mt-20px
-      div.text-sm Спец. условия для юр лиц. Скидка 10% от 5 шт.
+      div.text-sm.lg_text-base Спец. условия для юр лиц. Скидка 10% от 5 шт.
       +btn('Запросить КП','small,special')(data-modal-open='modal-special-offer')
     .modal.modal--regular.modal--special#modal-special-offer
       .modal__overlay(tabindex='-1' data-modal-close)
@@ -158,7 +207,7 @@ mixin product-main(props={}, mods)
                   type: 'text',
                   rows: 5
                 }
-              })(class='form-special__msg relative')
+              })(class='form__msg field-text--send relative')
                 +btn-send
             +load-file({id: 'special-file', btn_classes: 'btn--icon btn--regular border-gray-300 mb-5px inline-flex'})
               +svg('paperclip','',{width: 20,height:19})
@@ -170,7 +219,7 @@ mixin product-main(props={}, mods)
       +author({
         name: 'Иванова Анна Ивановна',
         text: 'Ответит врач',
-      },'ask')
+      },'ask-doctor')
       form.form.form--ask-doctor
         +field-text({
           attrs: {
@@ -194,8 +243,57 @@ mixin product-main(props={}, mods)
             type: 'text',
             rows: 5
           }
-        })(class='form-special__msg relative')
+        })(class='form__msg field-text--send relative')
           +btn-send
+    .modal.modal--options#modal-options
+      .modal__overlay(tabindex='-1' data-modal-close)
+        .modal__container(role='dialog' aria-modal='true' aria-labelledby= props.title)
+          header.modal__header
+            .modal__title Дополнительные опции
+            +close({title: 'Закрыть'})(class="modal__close" aria-label="Close modal" data-modal-close)
+          .modal__inner.mb-15px
+            form.form.form--options
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для акушерства и&nbsp;гинекологии <span>(+17 400.00р.)</span>'
+              })
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для оториноларингологии <span>(+12 000.00р.)</span>'
+              })
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для стоматологии <span>(+10 800.00р.)</span>'
+              })
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для урологии и проктологии <span>(+9 600.00р.)</span>'
+              })
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для акушерства и&nbsp;гинекологии <span>(+17 400.00р.)</span>'
+              })
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для оториноларингологии <span>(+12 000.00р.)</span>'
+              })
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для стоматологии <span>(+10 800.00р.)</span>'
+              })
+              +product-options-item({
+                src: '/img/product_50x50.jpg',
+                desc: 'Комплект насадок для урологии и проктологии <span>(+9 600.00р.)</span>'
+              })
+          +btn('<span>Добавить</span>','regular, options-add')(class='product-options__add self-center' data-modal-close)
+    //- +modal({
+    //-   id: 'modal-options',
+    //-   title: 'Дополнительные опции'
+    //- },'options')
+    .product-main__delivery
+      .product-main__delivery-item.product-main__delivery-item--office Самовывоз из офиса в Москве: <span>сегодня</span>, <span>бесплатно</span>
+      .product-main__delivery-item.product-main__delivery-item--courier Курьером по Москве: <span>10.04.2022</span>  <span>от 500 руб. / бесплатно</span>
+      a.product-main__delivery-item.product-main__delivery-item--others(href='#') Другие способы доставки
 
 mixin product-main-item-video(props={}, mods)
   -
