--- a/src/blocks/form-filter/form-filter.scss
+++ b/src/blocks/form-filter/form-filter.scss
@@ -65,4 +65,10 @@
   border-radius: 4px;
   background-color: #fff;
   @apply shadow-default;
+
+  .tippy-arrow {
+    &::before {
+      border-top-color: #fff;
+    }
+  }
 }
