--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,12 +1,26 @@
-// //catalog test
+//all
 
-// .nav-tabs .nav-link.active {
-//   background-color: transparent;
+// html  * {
+//   color: red !important;
 // }
+
 
 // .nav-link {
 //   color: red !important;
+//   background-color: transparent !important;
+//   border-color: red !important;
 // }
+
+// //delivery
+// .bg-gray-100 {
+//   outline: 1px solid red;
+//   background-color: transparent !important;
+// }
+
+
+// //catalog test
+
+
 
 // .product-card__img {
 //   background-color: transparent;
