--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -97,7 +97,7 @@
     // top: -815px; //vacancies
     // top: -275px;
     //top: -5280px;
-    // content: url('../screens/delivery-page.jpg');
+    // content: url('../screens/pay.jpg');
     opacity: 1;
   }
 
