--- a/src/blocks/pay-cards/pay-cards.scss
+++ b/src/blocks/pay-cards/pay-cards.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   padding: 0;
 
-  @media (min-width: $screen-lg) {
+  @media (min-width: 480px) {
     justify-content: start;
   }
 
